--- a/backend/package.json
+++ b/backend/package.json
@@ -16,5 +16,8 @@
     "express": "^4.19.2",
     "mongoose": "^8.5.0",
     "validator": "^13.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
